# salient-tutor-public

./: CHANGELOG.md  README.md  pyproject.toml
data/curricula/: memory-craft.json
prompts/: tutor.md  websearch.md
src/salient_tutor/: cli.py  daemon.py  lesson.py  lesson_store.py  web.py
tests/: test_agent_config_api.py  test_lesson_store.py  test_session_api.py  test_skill_graph.py  test_websearch_agent.py
web/static/js/: tutor.js
